# simple_tesseract_ocr

./: README.md  main.py  my_tesseract.py  prepare_image.py  pyproject.toml
