[tool.poetry]
name = "simple_tesseract_ocr"
version = "0.1.0"
description = ""
authors = ["GeoBurdin"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
autocorrect = "^2.6.0"
opencv-python = "^4.5.4"
Pillow = "^8.4.0"
fitz = "^0.0.1-alpha.2"
PyMuPDF = "^1.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
